# gasket

./: .gitignore  Dockerfile  README.md  RULES.md  client_example.html  config.example.yaml  task.md
.github/workflows/: ci.yml  release.yml
docs/: architecture-en.md  architecture.md  copilot-setup.md  data-flow.md  data-structures.md  modules.md  statemachine.md
docs/superpowers/plans/: 2026-03-25-agent-pipeline-lifecycle-hooks.md  2026-03-26-subagent-message-isolation.md  2026-03-27-code-quality-fixes.md  2026-03-27-session-history-data-model.md
docs/superpowers/specs/: 2026-03-25-agent-pipeline-lifecycle-hooks-design.md  2026-03-26-subagent-message-isolation-design.md  2026-03-27-code-quality-fixes-design.md  2026-03-27-three-layer-migration-design.md
gasket/: Cargo.toml
gasket/bus/: Cargo.toml  README.md
gasket/bus/src/: actors.rs  lib.rs
gasket/channels/: Cargo.toml
gasket/channels/src/: config.rs  dingtalk.rs  discord.rs  email.rs  error.rs  events.rs  feishu.rs  lib.rs  middleware.rs  outbound.rs  slack.rs  telegram.rs  websocket.rs  wecom.rs
gasket/cli/: Cargo.toml
gasket/cli/src/: cli.rs  main.rs  provider.rs  workspace_downloader.rs
gasket/cli/src/commands/: agent.rs  auth.rs  cron.rs  gateway.rs  mod.rs  onboard.rs  registry.rs  status.rs  vault.rs
gasket/cli/src/interaction/: cli.rs  mod.rs
gasket/core/: Cargo.toml
gasket/core/src/: error.rs  lib.rs
gasket/core/src/agent/: compression.rs  context_v2.rs  executor_core.rs  history_processor.rs  history_query.rs  loop_.rs  memory.rs  mod.rs  prompt.rs  request.rs  skill_loader.rs  stream.rs  subagent.rs  summarization.rs
gasket/core/src/bus/: actors.rs  events.rs  mod.rs  queue.rs
gasket/core/src/channels/: mod.rs
gasket/core/src/config/: agent.rs  channel.rs  loader.rs  mod.rs  provider.rs  resolver.rs  schema.rs
gasket/core/src/cron/: service.rs
gasket/core/src/crypto/: wecom.rs
gasket/core/src/hooks/: external.rs  history.rs  registry.rs
gasket/core/src/memory/: mod.rs
gasket/core/src/providers/: mod.rs  registry.rs
gasket/core/src/search/: mod.rs
gasket/core/src/tools/: base.rs  filesystem.rs  history_search.rs  mod.rs  rig_compat.rs  shell.rs  spawn.rs  spawn_parallel.rs
gasket/core/tests/: channel_e2e_tests.rs  e2e_tests.rs  subagent_integration_test.rs
gasket/docs/: architecture.md
gasket/engine/: Cargo.toml  README.md
gasket/engine/src/: bus_adapter.rs  error.rs  lib.rs
gasket/history/: Cargo.toml  README.md
gasket/history/src/: lib.rs
gasket/history/src/search/: mod.rs
gasket/providers/: Cargo.toml
gasket/providers/src/: base.rs  common.rs  copilot.rs  copilot_oauth.rs  gemini.rs  lib.rs  model_spec.rs  streaming.rs  utils.rs
gasket/sandbox/: Cargo.toml  README.md
gasket/sandbox/src/: error.rs  lib.rs
gasket/semantic/: Cargo.toml
gasket/semantic/src/: embedder.rs  lib.rs  vector_math.rs
gasket/storage/: Cargo.toml
gasket/storage/src/: event_store.rs  lib.rs  session.rs
gasket/tantivy/tests/: integration_test.rs
gasket/types/: Cargo.toml
gasket/types/src/: events.rs  lib.rs  session_event.rs  tool.rs
gasket/vault/: Cargo.toml
gasket/vault/src/: lib.rs
nanobot-rs/: Cargo.toml  rustfmt.toml
nanobot-rs/nanobot-cli/: Cargo.toml
nanobot-rs/nanobot-cli/src/: cli.rs  main.rs  provider.rs
nanobot-rs/nanobot-core/: Cargo.toml
nanobot-rs/nanobot-core/src/: error.rs  lib.rs
nanobot-rs/nanobot-core/tests/: channel_e2e_tests.rs  e2e_tests.rs
nanobot-rs/nanobot-pipeline/: Cargo.toml
nanobot-rs/nanobot-pipeline/src/: bootstrap.rs  lib.rs  orchestrator.rs
nanobot-rs/nanobot-pipeline/src/tools/: delegate.rs  mod.rs  pipeline_task.rs  report_progress.rs
nanobot-rs/nanobot-sandbox/: Cargo.toml
nanobot-rs/nanobot-sandbox/src/approval/: mod.rs  session.rs  store_sqlite.rs
nanobot-rs/nanobot-sandbox/src/audit/: log.rs
nanobot-rs/nanobot-sandbox/src/backend/: fallback.rs  mod.rs
nanobot-rs/nanobot-sandbox/src/backend/platform/: linux.rs  macos.rs  mod.rs  windows.rs
nanobot-rs/nanobot-sandbox/src/interaction/: cli.rs
nanobot-rs/nanobot-statemachine/: Cargo.toml
nanobot-rs/nanobot-statemachine/src/: config_loader.rs  engine.rs  events.rs  lib.rs  models.rs  stall_detector.rs  store.rs  types.rs
nanobot-rs/nanobot-statemachine/src/tools/: mod.rs  report_progress.rs  state_machine_task.rs
nanobot-rs/nanobot-tantivy/: Cargo.toml
nanobot-rs/nanobot-tantivy/src/: lib.rs
nanobot-rs/nanobot-tantivy/src/search/: mod.rs
nanobot-rs/nanobot-tantivy/src/search/tantivy/: history_index.rs  memory_index.rs  mod.rs
openspec/changes/add-dynamic-model-switching/: proposal.md  tasks.md
openspec/changes/add-llm-streaming/: tasks.md
openspec/changes/add-missing-python-features/: tasks.md
openspec/changes/enhance-security-and-observability/: design.md  proposal.md  tasks.md
openspec/changes/migrate-to-rust/: design.md  proposal.md  tasks.md
openspec/changes/refactor-infrastructure-with-trail/: tasks.md
openspec/changes/refactor-tantivy-to-mcp-index-server/: design.md  proposal.md  tasks.md
tantivy-cli/: Cargo.toml
tantivy-cli/src/: error.rs  main.rs
tantivy-cli/src/index/: manager.rs  mod.rs
tantivy-cli/src/maintenance/: mod.rs
tantivy-mcp/: Cargo.toml  README.md
tantivy-mcp/src/: error.rs  lib.rs  main.rs  tools.rs
tantivy-mcp/src/index/: document.rs  manager.rs  mod.rs  search.rs
tantivy-mcp/src/maintenance/: backup.rs  compact.rs  expire.rs  jobs.rs  mod.rs  rebuild.rs  scheduler.rs
tantivy-mcp/src/mcp/: handler.rs  mod.rs  tools.rs  transport.rs  types.rs
tantivy-mcp/tests/: integration_test.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
web/src/: App.vue
web/src/components/: ChatArea.vue  MessageBubble.vue
web/src/types/: index.ts
workspace/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  MEMORY.md  PROFILE.md  SOUL.md
workspace/skills/cron/: SKILL.md
workspace/skills/email-poller/: SKILL.md
workspace/skills/memory/: SKILL.md
workspace/skills/skill-creator/: SKILL.md
workspace/skills/summarize/: SKILL.md
workspace/skills/weather/: SKILL.md
(+203 files in other folders)
