[package]
name = "gasket-bus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Message bus for gasket AI assistant"

[dependencies]
gasket-types = { path = "../types" }
gasket-channels = { path = "../channels" }
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true

[features]
default = []
webhook = ["gasket-channels/webhook"]
