[package]
name = "gasket-history"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "History retrieval and processing for gasket"

[dependencies]
gasket-types = { path = "../types" }
gasket-storage = { path = "../storage" }
gasket-semantic = { path = "../semantic" }
tokio.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tiktoken-rs = "0.9"

[features]
default = []
local-embedding = ["gasket-semantic/local-embedding"]
