[package]
name = "gasket-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Secure vault for storing and injecting secrets in gasket"

[dependencies]
# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time
chrono.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Configuration
dirs.workspace = true

# Encryption
chacha20poly1305 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Base64 encoding
base64 = "0.22"

# Regex for placeholder scanning
regex = "1"

[dev-dependencies]
tempfile = "3"
