[package]
name = "nanobot-statemachine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "State machine for multi-agent collaboration in nanobot"

[dependencies]
nanobot-core = { path = "../nanobot-core" }

# Async
tokio = { workspace = true, features = ["sync", "macros", "time", "rt"] }
async-trait.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"

# Tracing
tracing.workspace = true

# Time
chrono.workspace = true

# UUID
uuid = { workspace = true, features = ["v4"] }

# SQLite
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Error handling
anyhow.workspace = true
