[package]
name = "nanobot-tantivy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tantivy-based full-text search for nanobot"

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging & Tracing
tracing.workspace = true

# Error handling
thiserror.workspace = true

# Time
chrono = { workspace = true, features = ["serde"] }

# Full-text search
tantivy = "0.25"

[dev-dependencies]
tempfile = "3"
